[gd_scene load_steps=7 format=2]

[ext_resource path="res://levels/TestLevel3/TestScript.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 56, 200 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "move"
length = 10.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 56, 200 ), Vector2( 176, 200 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 24 )

[node name="TestScript" type="Node"]
script = ExtResource( 1 )

[node name="Start" type="Area2D" parent="."]
position = Vector2( 56, 200 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="Icon" type="Sprite" parent="Start"]
scale = Vector2( 0.25, 0.25 )
z_index = -1
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Start"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Start"]
anims/RESET = SubResource( 3 )
anims/move = SubResource( 4 )

[node name="Jump" type="Area2D" parent="."]
position = Vector2( 456, 200 )
collision_layer = 0
monitoring = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jump"]
shape = SubResource( 1 )

[node name="JumpAndDash" type="Area2D" parent="."]
position = Vector2( 704, 184 )
collision_layer = 0
monitoring = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpAndDash"]
shape = SubResource( 2 )

[node name="Stop" type="Area2D" parent="."]
position = Vector2( 968, 200 )
collision_layer = 0
monitoring = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stop"]
shape = SubResource( 1 )

[connection signal="body_entered" from="Start" to="." method="_on_Start_body_entered"]
[connection signal="body_entered" from="Jump" to="." method="_on_Jump_body_entered"]
[connection signal="body_entered" from="JumpAndDash" to="." method="_on_JumpAndDash_body_entered"]
[connection signal="body_exited" from="JumpAndDash" to="." method="_on_JumpAndDash_body_exited"]
[connection signal="body_entered" from="Stop" to="." method="_on_Stop_body_entered"]
